--- a/raster_data_analysis_assign.ipynb
+++ b/raster_data_analysis_assign.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "raster data analysis assign.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpabKl+7m03XhsTFAkGtfs",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMzKxKDTsdmjm0LCw/0Mb0v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,6 +108,17 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n"
+      ],
+      "metadata": {
+        "id": "iXUxYByfKlaH"
+      },
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
